--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
-            rel="stylesheet" /> -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Cinzel&family=Fauna+One&family=Inter:wght@400;500;700&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700&display=swap"
             rel="stylesheet" />
-        <link rel="stylesheet" href="/src/styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="/styles.css" rel="stylesheet" />
+
         <title>Vite + React + TS</title>
     </head>
     <body>
